@@ -39,6 +39,7 @@ Minor features
  * Added ``first_common_ancestor`` method to ``PageQuerySet`` (Tim Heap)
  * Page chooser now opens at the deepest ancestor page that covers all the pages of the required page type (Tim Heap)
  * ``PageChooserBlock`` now accepts a ``target_model`` option to specify the required page type (Tim Heap)
+ * Modeladmin forms now respect ``fields`` / ``exclude`` options passed on custom model forms (Thejaswi Puthraya)
 
 
 Bug fixes
